kanisa/static/kanisa/css/kanisa.css
html,
body {
  height: 100%;
}

#footer {
    margin-top: 10px;
    background-color: #111;
    font-size: 90%;
}

#footer p {
    margin: 0.5em;
}

#footer div.github {
    text-align: right;
}

div.carousel-caption {
    background-color: #000;
    background-color:rgba(0,0,0,0.5);
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0;
    padding-bottom: 10px;
    text-align: left;
}

div.carousel-caption h4,
div.carousel-caption p {
    margin-left: 20px;
    margin-right: 20px;
    text-align: left;
}

div.carousel-caption p {
    font-size: 90%;
}

div.carousel-caption p.link-text {
    text-align: right;
    margin: 0 10px 0 0;
}

div.carousel-caption p.link-text a {
    color: #fff;
    font-size: 120%;
}

.kanisa_diary td {
    vertical-align: middle;
}

.kanisa_diary td div.notlast {
    padding-bottom: 3px;
}

h1.primary {
    margin-bottom: 0.7em;
}

label.requiredField {
    font-weight: bold;
}

.biblepassageresponse {
    margin-left: 1em;
}

.search-result {
    margin-bottom: 1em;
}

.search-result blockquote p {
    font-size: 1em;
}

.search-result blockquote.withthumbnail {
    min-height: 100px;
}

.search-result blockquote.withthumbnail img {
    float: left;
    margin-right: 10px;
}

.help_text,
.search-result .footnote {
    font-size: 90%;
    color: #555;
}

.extra_details {
    color: #555;
}

.muted .extra_details {
    color: #aaa;
}

i.spinner {
    background-image: url(../img/ajax.gif);
    background-repeat: no-repeat;
    height: 16px;
    width: 16px;
    display: inline-block;
}

td.iconcell i.spinner {
    position: absolute;
    left: 16px;
    top: 10px;
}

th.iconcell,
td.iconcell {
    width: 32px;
    text-align: center;
    position: relative;
}

.inline-status {
    display: inline-block;
    vertical-align: middle;
}

h3 span.help_text {
    font-size: 12px;
    font-weight: normal;
}

td h5 {
    margin-top: 0;
}

.colour-swatch {
    display: block;
    padding: 3px;
    background-color: #fff;
    border: 1px solid #ccc;
    width: 40px;
    height: 40px;
    box-sizing: content-box;
}

.colour-swatch div {
    height: 40px;
    width: 40px;
}

ul.sidebar > li > a {
    padding: 7px;
}

textarea.kanisamaininputwidget {
    width: 100%;
    margin-bottom: 10px;
}

.kanisaintroinputwidget {
    width: 100%
}

.kanisatinyinputwidget {
    width: 100%
}

.alert a {
    text-decoration: underline;
}

.navbar-text a,
.navbar-text a:hover {
    color: inherit;
}

.navbar-text a.kanisa_manage {
    text-decoration: none;
}

.navbar-inverse .navbar-nav > li > a {
    color: #eee;
}

#logo {
    position: relative;
    margin-bottom: 4px;
}

#logo .navbar-form {
    position: absolute;
    top: 0;
    right: 0;
    width: 300px;
}

#logo img.main_logo {
    max-width: 100%;
    height: auto;
}

.editable_block_wrapper {
    position: relative;
}

.editable_block_wrapper .editable_block_btn {
    position: absolute;
    top: 0;
    right: 0;
    opacity: 0.8;
}

.lead .editable_block_btn {
    font-size: 11px;
}

.document_details_short:hover,
.document_details_full:hover {
    cursor: pointer;
}

.document_details_short span {
    font-size: 90%;
}

div.recurrence-widget.recurrencewidget.form-control {
    width: inherit;
    height: inherit;
}

.controls div.recurrence-widget .add-button:link,
.controls div.recurrence-widget .add-button:visited,
.controls div.recurrence-widget .add-button:hover {
    text-decoration: none;
    color: #08c;
}

.controls div.recurrence-widget .add-button:hover {
    color: #005580;
}

span.amp {
    font-style: italic;
    font-family: Baskerville, Palatino, "Book Antiqua", "URW Bookman L", serif;
    font-weight: normal;
}

body.popup {
    margin: 0;
    padding: 10px;
}

body.popup h2 {
    margin: 0 0 10px 0;
    padding-bottom: 3px;
    border-bottom: 1px solid #ccc;
}

body.popup .form-actions {
    margin: 0;
}

body.popup form {
    margin: 0;
    width: 90%;
}

table.userpermtable td {
    vertical-align: middle;
}

ul.nav-tabs {
    margin-bottom: 1em;
}

ul.nav-pills li.nav-header {
    font-weight: bold;
}

#page_quick_create input {
    width: 300px;
}

#page_quick_create select {
    width: 200px;
}

input.bootstraptimewidget.timepicker {
    width: 7em;
}

input.bootstrapdatewidget.datepicker {
    width: 7em;
}

div.form-actions {
    margin-bottom: 1em;
}

.kanisa_thumbnails h4 {
    min-height: 4em;
}

.kanisa_thumbnails .caption h4 a {
    text-decoration: none;
}

.kanisa_event_contacts .thumbnail .caption {
    padding: 4px;
}

.kanisa_event_contacts .thumbnail .caption h5 {
    margin-bottom: 3px;
    margin-top: 3px;
    min-height: 2.2em;
    font-weight: bold;
}

.kanisa_event_contacts .thumbnail .caption a {
    text-decoration: none;
}

.kanisa_sermon_speakers a.thumbnail {
    text-decoration: none;
}

.kanisa_sermon_speakers .thumbnail .caption h5 {
    margin-bottom: 3px;
    margin-top: 3px;
    min-height: 3.5em;
    font-weight: bold;
}

.kanisa_banners .thumbnail h5 {
    min-height: 2.5em;
}

.kanisa_banners .thumbnail h5 a {
    text-decoration: none;
    font-weight: bold;
}

@media (max-width: 600px) {
    #banners_carousel {
        display: none;
    }
}

@media (max-width: 992px) {
    #banners_carousel {
        width: 555px;
        margin: 50px auto;
    }
}

#sermon_archive_table > tbody > tr > td:first-child {
    width: 90px;
    height: 80px;
    vertical-align: top;
}

#sermon_archive_table > tbody > tr > td {
    vertical-align: middle;
}

.text-muted.login-notes {
    font-size: 70%;
}

.numberinput {
    width: 7em;
}

@media (max-width: 768px) {
    .navbar-header ul.navbar-nav {
        margin-left: 0;
    }
}

.sermon_series_list {
    margin-bottom: 1em;
}

.sermon_series_list h2 {
    margin-top: 0;
}

.kanisa_recent_logins > div {
    clear: left;
    min-height: 60px;
}

.kanisa_recent_logins div div {
    padding-left: 60px;
    padding-top: 5px;
}

.eventcategoryfilter li {
    margin-bottom: 5px;
    margin-right: 5px;
}

.main_input_widget_image_choice {
    cursor: pointer;
    margin-bottom: 5px;
}

#kanisa_homepage_intro {
    font-size: 120%;
}

#kanisa_homepage_intro h1 {
    font-size: 32px;
    padding-bottom: 3px;
    border-bottom: 1px solid #ccc;
    margin-top: 0;
}

.recurrencewidget input.checkbox,
.recurrencewidget input.radio {
    display: inline;
}

p.error-page-btn {
    text-align: center;
}

.main_input_widget_container ul.pager {
    margin: 0 0 1em 0;
}

.facebook_like_widget {
    margin: 1em 0;
}

#xs-management-menu {
    margin: 0 0 1em 0;
}

/*
From http://themeloom.com/2013/02/tips-embed-google-maps-and-calendars-in-a-responsive-wordpress-theme/
*/
.responsive-iframe-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}

.responsive-iframe-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.inline-delete-btn {
    margin-top: 4px;
}

#regular_event_list .regular-event-img-link {
    float: left;
    margin: 0 10px 10px 0;
}

#regular_event_list h3 {
    margin-top: 0;
}

#regular_event_list h3,
#regular_event_list p {
    margin-left: 90px;
}

.involved-in-serviceplan,
.involved-in-serviceplan td {
    background-image: -webkit-linear-gradient(top,#d9edf7 0,#b9def0 100%);
    background-image: linear-gradient(to bottom,#d9edf7 0,#b9def0 100%);
    background-repeat: repeat-x;
    border-color: #9acfea;
    color: #31708f;
    background-color: #d9edf7;
}

.service-songs-edit select,
.service-songs-edit .chosen-container {
    margin-bottom: 1em;
}

table.song-table form {
    margin: 0;
}

.bs-callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
  background-color: #f0f7fd;
  border-color: #d0e3f0;
  margin-left: -20px;
  font-size: 120%;
}

.bs-callout h4 {
  color: #34789a;
  margin-top: 0;
  font-size: 150%;
}

.bs-callout h5 {
  margin-top: 0;
  font-size: inherit;
  font-weight: bold;
}

.bs-callout p:last-child {
  margin-bottom: 0;
}

.bs-callout.bs-callout-subtle {
    font-size: inherit;
    margin-top: 0;
}

table.sermonseries-table tr th {
    width: 110px;
}

table.sermonseries-table .thumbnail {
    margin-bottom: 0;
}

table.sermonseries-table h4 a {
    text-decoration: none;
}

